# stream_viewer

./: .gitattributes  .gitignore  BUILD_EXECUTABLE.md  README.md  build_exe.py  lsl_viewer.spec  mkdocs.yml  pyproject.toml  requirements.txt  stream_viewer.code-workspace  update_mne_path.py
.cursor/: worktrees.json
.cursor/plans/: activity_led_flash_15347e9b.plan.md  channel_activity_monitoring_a433d0ba.plan.md  config_and_info_buttons_fcb15f04.plan.md  console_output_widget_integration_14b0a1d3.plan.md  convert_heatmappg_to_remotegraphicsview_bbe7c7d4.plan.md  debounce_property_changes_0e42a19d.plan.md  eeg_heatmap_timeline_track_27a9df13.plan.md  eegfp_historical_datasource_53d84905.plan.md  fix_empty_timeline_and_close_crash_5c1f40d3.plan.md  fix_scroll_mode_jerky_bounds_5102837b.plan.md  fix_shutdown_warnings_8207b055.plan.md  full_session_scrolling_support_a8b6e90f.plan.md  gfp_dock_options_panel_c0c3eb40.plan.md  global_heatmap_normalization_72199cf7.plan.md  heatmap_performance_optimization_9f052fde.plan.md  implot_gpu_spectrogram_renderer_50a3c5e4.plan.md  integrate_sources_list_dock_557fcb43.plan.md  lsl_streams_on_pyphotimeline_11bf9d29.plan.md  phopyqthelper_package_creation_75446597.plan.md  refresh_xdf_and_video_button_01899595.plan.md  remove_irrelevant_controls_from_topomnecontrolpanel_9b02a68a.plan.md  remove_notify_checkboxes_b9f9cd7c.plan.md  replace_implot_with_gpu-accelerated_spectrogram_33f97d09.plan.md  right-align_controls_column_c234c3d7.plan.md  scroll-back_and_re-sync_for_heatmap_27968e7e.plan.md  scroll-back_and_re-sync_for_heatmap_680afb02.plan.md  setup_uv-deps-switcher_for_stream_viewer_3b62ba14.plan.md  shared_renderer_migration_4ca06a35.plan.md  status_indicator_tooltip_428d567c.plan.md  stream-level_activity_monitoring_3fa3fbf2.plan.md  update_topomne_to_pyvista_3d_head_mesh_df102b9a.plan.md
.kiro/specs/visualization-documentation/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
docs/: README.md
docs/modules/renderers/: annotated-examples.md  architecture.md  development-guide.md  minimal_example.py
stream_viewer/applications/: lsl_sonify.py  lsl_spectrogram.py  main.py  stream_status_qml.py  test_audio.py
stream_viewer/applications/eegsynth/: input.ini  lsl_eegsynth.py  patch.ini
stream_viewer/data/: stream_info.py  stream_lsl.py
stream_viewer/qml/: streamInfoListView.qml
stream_viewer/renderers/: __init__.py  heatmap_gpu.py  heatmap_implot.py  heatmap_pg.py  line_pg.py  line_power_vis.py  line_vis.py  resolver.py  sonify_audio.py  spectrogram_pg.py  topo_mne.py  topo_vb.py
stream_viewer/renderers/data/: base.py  brainstorm_electrode_positions_PhoHAle_eeg_subjectspacemm.tsv
stream_viewer/renderers/display/: audio.py  implot.py  matplotlib.py  pyvista.py  visbrain.py
stream_viewer/timeline/: __init__.py  stream_viewer_lsl_track_datasource.py
stream_viewer/utils/: __init__.py  live_mixins.py  optional_imports.py
stream_viewer/widgets/: __init__.py  bar_ctrl.py  config_renderer.py  console_output.py  heatmap_ctrl.py  interface.py  line_power_ctrl.py  sonify_ctrl.py  spectrogram_ctrl.py  stream_info.py  time_series.py  topo_mne_ctrl.py
templating/: pyproject_template_dev.toml_fragment  pyproject_template_release.toml_fragment
