[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "stream-viewer"
version = "0.30.0"
description = 'Tools to visualize data streamed with Lab Streaming Layer'
keywords = ["lsl", "lab streaming layer", "streaming", "visualization", "eeg", "neural data"]
readme = "docs/README.md"
authors = [
    {name="Chadwick Boulay", email="chadwick.boulay@gmail.com"},
    {name="Sean Mullen", email="sean.mullen@intheon.io"},
    {name="Pho Hale", email="PhoHale@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10,<3.12"
classifiers = [
    "Programming Language :: Python :: 3"]
dependencies = [
    "numpy",
    "matplotlib>=3.7.5",
    "packaging",
    "pandas",
    "pylsl>=1.16.2",
    "pyopengl",
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.2",
    "pyqtgraph",
    "qtpy",
    "scipy",
    "setuptools>=75.3.2",
    "visbrain",
    "vispy",
    "mne>=1.6.1",
    "eegsynth>=0.8.0",
    "python-rtmidi>=1.5.8",
    "sounddevice>=0.4.6",
    "redis>=6.1.1",
    "python-levenshtein>=0.25.1",
    "pyaudio>=0.2.14",
]

[project.scripts]
lsl_viewer = "stream_viewer.applications.main:main"
lsl_status = "stream_viewer.applications.stream_status_qml:main"
# lsl_switching_viewer = "stream_viewer.applications.lsl_switching:main"
# lsl_viewer_custom = "stream_viewer.applications.lsl_custom:main"
lsl_sonify = "stream_viewer.applications.lsl_sonify:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["stream_viewer*"]
exclude = ["icons*", "docs*", "dist*"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.23",
    "mkdocstrings>=0.26.1",
    "mkdocstrings-python>=1.11.1",
    "pygments>=2.19.2",
    "pymdown-extensions>=10.15",
]
implot = [
    "slimgui>=0.1.0",
]
