[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "stream-viewer"
version = "0.30.6"
description = 'Tools to visualize data streamed with Lab Streaming Layer'
keywords = ["lsl", "lab streaming layer", "streaming", "visualization", "eeg", "neural data"]
readme = "docs/README.md"
authors = [
    {name="Chadwick Boulay", email="chadwick.boulay@gmail.com"},
    {name="Sean Mullen", email="sean.mullen@intheon.io"},
    {name="Pho Hale", email="PhoHale@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10,<3.12"
classifiers = [
    "Programming Language :: Python :: 3"]
dependencies = [
    "numpy",
    "matplotlib>=3.7.5",
    "packaging",
    "pandas",
    "pylsl>=1.16.2",
    "pyopengl",
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.2",
    "pyqtgraph",
    "qtpy",
    "scipy",
    "visbrain",
    "vispy",
    "mne>=1.6.1",
    "eegsynth>=0.8.0",
    "python-rtmidi>=1.5.8",
    "sounddevice>=0.4.6",
    "redis>=6.1.1",
    "python-levenshtein>=0.25.1",
    "pyaudio>=0.2.14",
    "slimgui>=0.6.0",
    "ipykernel>=6.29",
    "ipywidgets>=8.1.8",
    "dearpygui>=2.1.1",
    "cython>=3.2.3",
    "pyvistaqt>=0.11.3",
    "pyvista>=0.46.4",
    "phopymnehelper",
    "phopyqthelper",
    # "rerun-sdk==0.29.2; sys_platform != 'darwin'"
    # "dive",
    "setuptools>=81.0.0",
    "wheel>=0.46.3",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0.0",
]

# rerun: not declared here so uv lock never requires it (rerun-sdk needs numpy>=2, conflicts with dev mne).
# Install manually when desired: uv add rerun-sdk. Use stream_viewer.utils.RERUN_AVAILABLE / rr to guard code.

[project.scripts]
lsl_viewer = "stream_viewer.applications.main:main"
lsl_status = "stream_viewer.applications.stream_status_qml:main"
# lsl_switching_viewer = "stream_viewer.applications.lsl_switching:main"
# lsl_viewer_custom = "stream_viewer.applications.lsl_custom:main"
lsl_sonify = "stream_viewer.applications.lsl_sonify:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["stream_viewer*"]
exclude = ["icons*", "docs*", "dist*"]

[tool.uv.sources]
# Path to mne-python (auto-detected by update_mne_path.py script)
# The script checks for "../mne-python" and "../../mne-python" and uses whichever exists
# Run 'python update_mne_path.py' to automatically set the correct path based on your directory structure
# This avoids git conflicts when working across different directory layouts
mne = { path = "../mne-python", editable = true }
phopymnehelper = { path = "../PhoPyMNEHelper", editable = true }
phopyqthelper = { path = "../phopyqthelper", editable = true }
py-pho-timeline = { path = "../pyPhoTimeline", editable = true }
# dive = { path = "../DIVE", editable = true }

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.23",
    "mkdocstrings>=0.24,<0.25",
    "mkdocstrings-python>=1.10",
    "pygments>=2.19.2",
    "pymdown-extensions>=10.15",
    "pyinstaller>=6.0.0",
    "vulture>=2.14",
    "pyflakes>=3.4.0",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
stream-viewer = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
gpu = { features = ["gpu"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pyinstaller = ">=6.19.0,<7"
