[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "stream-viewer"
version = "0.30.7"
description = 'Tools to visualize data streamed with Lab Streaming Layer'
keywords = ["lsl", "lab streaming layer", "streaming", "visualization", "eeg", "neural data"]
readme = "docs/README.md"
authors = [
    {name="Chadwick Boulay", email="chadwick.boulay@gmail.com"},
    {name="Sean Mullen", email="sean.mullen@intheon.io"},
    {name="Pho Hale", email="PhoHale@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.11,<3.12"
classifiers = [
    "Programming Language :: Python :: 3"]
dependencies = [
    "numpy>=1.26.4,<2",
    "matplotlib>=3.10.8,<4",
    "packaging",
    "pandas>=2.3.3,<3",
    "pylsl>=1.18.1,<2",
    "pyopengl>=3.1.10,<4",
    "pyqt5>=5.15.11,<6",
    "pyqt5-qt5>=5.15.2,<6",
    "pyqtgraph>=0.14.0,<0.15",
    "qtpy>=2.4.3,<3",
    "scipy>=1.17.1,<2",
    "visbrain>=0.4.5,<0.5",
    "vispy>=0.16.1,<0.17",
    "mne",
    "eegsynth>=0.8.1,<0.9",
    "python-rtmidi>=1.5.8,<2",
    "sounddevice>=0.5.5,<0.6",
    "redis>=7.4.0,<8",
    "python-levenshtein>=0.27.3,<0.28",
    "pyaudio>=0.2.14,<0.3",
    "slimgui>=0.7.0,<0.8",
    "ipykernel>=7.2.0,<8",
    "ipywidgets>=8.1.8,<9",
    "dearpygui>=2.2,<3",
    "cython>=3.2.4,<4",
    "pyvistaqt>=0.11.4,<0.12",
    "pyvista>=0.46.5,<0.47",
    "phopymnehelper>=0.3.7,<0.4",
    "phopyqthelper>=0.1.0,<0.2",
    # "rerun-sdk==0.29.2; sys_platform != 'darwin'"
    # "dive",
    "setuptools",
    "wheel>=0.46.3,<0.47",
    "torch>=2.10.0,<3",
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.7.6,<10",
    "mkdocstrings-python>=2.0.3,<3",
    "pygments>=2.20.0,<3",
    "pymdown-extensions>=10.21.2,<11",
    "pyinstaller",
    "vulture>=2.16,<3",
    "pyflakes>=3.4.0,<4",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0.0",
]

# rerun: not declared here so uv lock never requires it (rerun-sdk needs numpy>=2, conflicts with dev mne).
# Install manually when desired: uv add rerun-sdk. Use stream_viewer.utils.RERUN_AVAILABLE / rr to guard code.

[project.scripts]
lsl_viewer = "stream_viewer.applications.main:main"
lsl_status = "stream_viewer.applications.stream_status_qml:main"
# lsl_switching_viewer = "stream_viewer.applications.lsl_switching:main"
# lsl_viewer_custom = "stream_viewer.applications.lsl_custom:main"
lsl_sonify = "stream_viewer.applications.lsl_sonify:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["stream_viewer*"]
exclude = ["icons*", "docs*", "dist*"]

[tool.uv.sources]
# Path to mne-python (auto-detected by update_mne_path.py script)
# The script checks for "../mne-python" and "../../mne-python" and uses whichever exists
# Run 'python update_mne_path.py' to automatically set the correct path based on your directory structure
# This avoids git conflicts when working across different directory layouts
mne = { path = "../mne-python", editable = true }
phopymnehelper = { path = "../PhoPyMNEHelper", editable = true }
phopyqthelper = { path = "../phopyqthelper", editable = true }
py-pho-timeline = { path = "../pyPhoTimeline", editable = true }
# dive = { path = "../DIVE", editable = true }

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.23",
    "mkdocstrings>=0.24", # ,<0.25
    "mkdocstrings-python>=1.10",
    "pygments>=2.19.2",
    "pymdown-extensions>=10.15",
    "pyinstaller>=6.0.0",
    "vulture>=2.14",
    "pyflakes>=3.4.0",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
stream-viewer = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
gpu = { features = ["gpu"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pyinstaller = ">=6.19.0,<7"
